# seafood

./: CMakeLists.txt  conanfile.py
bindings/: CMakeLists.txt
bindings/PySeaFood/: CMakeLists.txt  PySeaFood.cpp
examples/Example1/: .polyscope.ini  Beam.py  imgui.ini
src/: CMakeLists.txt
src/SeaFood/Collisions/: CollisionManager.h
src/SeaFood/Core/: CMakeLists.txt  Types.h
src/SeaFood/Physics/: Boid.h  CMakeLists.txt  Scene.cpp  Scene.h  Simulation.cpp  Simulation.h
